сообщения, право на создание, обозреватель объектов, карточка права

--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -179,6 +179,10 @@ body{
     padding-right: 0px !important;
 }
 
+.ui-outputlabel-rfi{
+    color: red !important;
+}
+
 .label-card{
     padding-left: 0px !important;
     padding-bottom: 0px !important;
