--- a/escom-bpm-web/src/main/webapp/view/services/mail/mail-box.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail/mail-box.xhtml
@@ -12,7 +12,7 @@
 
     <ui:define name="preRendered">
         <f:metadata>
-            <f:event type="preRenderView" listener="#{mailBoxBean.onOpenCard()}"/>
+            <f:event type="preRenderView" listener="#{mailBoxBean.onBeforeOpenCard()}"/>
         </f:metadata>
     </ui:define>
 
