--- a/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="preRendered">
         <f:metadata>
-            <f:event type="preRenderView" listener="#{countersExplBean.onOpenCard()}"/>
+            <f:event type="preRenderView" listener="#{countersExplBean.onBeforeOpenCard()}"/>
         </f:metadata>
     </ui:define>
 
