--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="preRendered">
         <f:metadata>
-            <f:event type="preRenderView" listener="#{attacheBean.onOpenCard()}"/>
+            <f:event type="preRenderView" listener="#{attacheBean.onBeforeOpenCard()}"/>
         </f:metadata>
     </ui:define>
 
