--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -10,8 +10,6 @@
         #{bundle.Messages}
     </ui:define>
 
-    <ui:param name="_frm" value="msgForm" />
-
     <ui:param name="_bean" value="#{userMsgBean}"/>
 
     <ui:define name="menuActions" >
@@ -47,6 +45,7 @@
                          paginator="true" paginatorPosition="bottom"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          rowsPerPageTemplate="10,25,50" rows="10" rowKey="#{item.id}"
+                         currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
                          tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
                          var="item" sortBy="#{item.dateSent}" sortOrder="descending"
                          selection="#{userMsgBean.checkedMessages}">
