--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -13,16 +13,18 @@
                          columnClasses="ui-grid-col-12 col-padding, ui-grid-col-12 col-padding" >
                 <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" >
 
-                    <p:outputLabel value="#{bundle.SecondName}" />
+                    <p:outputLabel value="#{bundle.SecondName}" indicateRequired="true"/>
                     <p:inputText id="nameItem" value="#{_bean.editedItem.secondName}" 
                                  styleClass="ui-grid-col-12"
                                  disabled="#{_bean.isReadOnly()}"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 required="#{param['isRequired'] == 'true'}"
+                                 requiredMessage="#{bundle.Field} [#{bundle.SecondName}] #{bundle.MustBeFilled}"
                                  onchange="return itemChange = 1;">
                         <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
                     </p:inputText>
                     
-                    <p:outputLabel value="#{bundle.FirstName}" />
+                    <p:outputLabel value="#{bundle.FirstName}" indicateRequired="true"/>
                     <p:inputText id="firstName" value="#{_bean.editedItem.firstName}"
                                  styleClass="ui-grid-col-12"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
@@ -69,7 +71,7 @@
                 </p:panelGrid>
 
                 <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" >
-                    <p:outputLabel value="#{bundle.VisibleName}" />
+                    <p:outputLabel value="#{bundle.VisibleName}" indicateRequired="true"/>
                     <p:inputText id="visbleName" value="#{_bean.editedItem.name}"
                                  disabled="#{_bean.isReadOnly()}"
                                  styleClass="ui-grid-col-12"
@@ -153,7 +155,7 @@
                     <ui:param name="_required" value="#{false}" />
                     <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                     <ui:param name="_itemPanel" value="folderPanel"/>
-                    <ui:param name="_titleItem" value="#{bundle.Folder}"/>
+                    <ui:param name="_titleItem" value="#{bundle.DefaultFolder}"/>
                     <ui:param name="_selectorBean" value="#{foldersBean}"/>
                     <ui:param name="_items" value="#{foldersBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setInbox"/>
